# stanley_carla

./: CMakeLists.txt  README.md  package.xml
include/: cubic_spline_planner.hpp  frenet_optimal_trajectory.hpp  visualization_helpers.hpp
src/: control.cpp  stanley.cpp
